SDKs/collegefootballdata.com/4.1.6/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { GetLinesRequest, GetLinesResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";

const sdk = new SDK(withSecurity(
  security: {
    apiKeyAuth: {
      apiKey: "YOUR_API_KEY_HERE",
    },
  }
));
    
const req: GetLinesRequest = {
  queryParams: {
    away: "sit",
    conference: "voluptas",
    gameId: 6050128673802995827,
    home: "expedita",
    seasonType: "consequuntur",
    team: "dolor",
    week: 1774932891286980153,
    year: 6044372234677422456,
  },
};

sdk.betting.getLines(req).then((res: GetLinesResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### betting

* `getLines` - Betting lines

### coaches

* `getCoaches` - Coaching records and history

### conferences

* `getConferences` - Conferences

### draft

* `getDraftPicks` - List of NFL Draft picks
* `getNflPositions` - List of NFL positions
* `getNflTeams` - List of NFL teams

### drives

* `getDrives` - Drive data and results

### games

* `getAdvancedBoxScore` - Advanced box scores
* `getCalendar` - Season calendar
* `getGameMedia` - Game media information and schedules
* `getGameWeather` - Game weather information (Patreon only)
* `getGames` - Games and results
* `getPlayerGameStats` - Player game stats
* `getTeamGameStats` - Team game stats
* `getTeamRecords` - Team records

### metrics

* `getGamePpa` - Team Predicated Points Added (PPA/EPA) by game
* `getPlayerGamePpa` - Player Predicated Points Added (PPA/EPA) broken down by game
* `getPlayerSeasonPpa` - Player Predicated Points Added (PPA/EPA) broken down by season
* `getPredictedPoints` - Predicted Points (i.e. Expected Points or EP)
* `getPregameWinProbabilities` - Pregame win probability data
* `getTeamPpa` - Predicted Points Added (PPA/EPA) data by team
* `getWinProbabilityData` - Win probability chart data

### players

* `getPlayerSeasonStats` - Player stats by season
* `getPlayerUsage` - Player usage metrics broken down by season
* `getReturningProduction` - Team returning production metrics
* `playerSearch` - Search for player information

### plays

* `getPlayStatTypes` - Types of player play stats
* `getPlayStats` - Play stats by play
* `getPlayTypes` - Play types
* `getPlays` - Play by play data

### rankings

* `getRankings` - Historical polls and rankings

### ratings

* `getConferenceSpRatings` - Historical SP+ ratings by conference
* `getSpRatings` - Historical SP+ ratings
* `getSrsRatings` - Historical SRS ratings

### recruiting

* `getRecruitingGroups` - Recruit position group ratings
* `getRecruitingPlayers` - Player recruiting ratings and rankings
* `getRecruitingTeams` - Team recruiting rankings and ratings

### stats

* `getAdvancedTeamGameStats` - Advanced team metrics by game
* `getAdvancedTeamSeasonStats` - Advanced team metrics by season
* `getStatCategories` - Team stat categories
* `getTeamSeasonStats` - Team statistics by season

### teams

* `getFbsTeams` - FBS team list
* `getRoster` - Team rosters
* `getTalent` - Team talent composite rankings
* `getTeamMatchup` - Team matchup history
* `getTeams` - Team information

### venues

* `getVenues` - Arena and venue information

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
